Integrations section completed.

--- a/index.html
+++ b/index.html
@@ -324,14 +324,16 @@
     <section class="github-teams-signup">
         <div class="container">
             <div class="teams-content">
-                <p class="section-sm-description">GitHub for teams  </p>
-                <h1 class="section-title ff-inter">A better way to work together</h1>
-                <p class="section-description ff-inter">GitHub brings teams together to work through problems, move ideas forward, and learn from each other along the way.</p>
-               <div class="btn-wrap">
-                   <a class="btn-outline-blue btn-teams-sign-up">
-                       Sign up your team  <i class="fas fa-long-arrow-alt-right"></i>
-                   </a>
-               </div>
+                <div class="section-head">
+                    <p class="sm-description ff-mono">GitHub for teams  </p>
+                    <h1 class="section-title ff-inter">A better way to work together</h1>
+                    <p class="section-description ff-inter">GitHub brings teams together to work through problems, move ideas forward, and learn from each other along the way.</p>
+                    <div class="btn-wrap">
+                        <a class="btn-outline-blue btn-teams-sign-up">
+                            Sign up your team  <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -470,17 +472,18 @@
         <div class="container">
             <div class="administration-content">
                 <div class="administration-header">
-                    <p class="section-sm-description ff-mono">Security and administration
-                    </p>
-                    <h1 class="section-title ff-inter">Your business needs, met
-
-                    </h1>
-                    <p class="section-description ff-inter">From flexible hosting to granular access controls, we’ve got your security requirements covered.
-                    </p>
-                    <div class="btn-wrap">
-                        <a class="btn-outline-blue btn-teams-sign-up">
-                            Learn how GitHub Enterprise works    <i class="fas fa-long-arrow-alt-right"></i>
-                        </a>
+                    <div class="section-head">
+                        <p class="sm-description ff-mono">Security and administration
+                        </p>
+                        <h1 class="section-title ff-inter">Your business needs, met
+                        </h1>
+                        <p class="section-description ff-inter">From flexible hosting to granular access controls, we’ve got your security requirements covered.
+                        </p>
+                        <div class="btn-wrap">
+                            <a class="btn-outline-blue btn-teams-sign-up">
+                                Learn how GitHub Enterprise works    <i class="fas fa-long-arrow-alt-right"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="administration-body">
@@ -514,6 +517,57 @@
                 </div>
 
 
+            </div>
+        </div>
+    </section>
+
+
+    <section class="integrations">
+        <div class="container">
+            <div class="integrations-content">
+                <div class="integration-header">
+                    <div class="section-head">
+                        <p class="sm-description ff-mono">Integrations </p>
+                        <h1 class="section-title ff-inter">Build on GitHub</h1>
+                        <p class="section-description ff-inter">Customize your process with GitHub apps and an intuitive API. Integrate the tools you already use or discover new favorites to create a happier, more efficient way of working.
+                        </p>
+                        <div class="btn-wrap">
+                            <a class="btn-outline-blue btn-teams-sign-up">
+                                Learn about integrations  <i class="fas fa-long-arrow-alt-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="integration-body">
+                    <div class="integration-list">
+                        <div class="integration-item slack" aria-label="Slack">
+                            <img src="https://github.githubassets.com/images/modules/site/integrators/slackhq.png" alt="" class="integration-logo">
+                        </div>
+                        <div class="integration-item zenhub" aria-label="Zenhub">
+                            <img src="https://github.githubassets.com/images/modules/site/integrators/zenhubio.png" alt="" class="integration-logo">
+                        </div>
+                        <div class="integration-item travis-ci" aria-label="Travis CI">
+                            <img src="https://github.githubassets.com/images/modules/site/integrators/travis-ci.png" alt="" class="integration-logo">
+                        </div>
+                        <div class="integration-item atom" aria-label="Atom">
+                            <img src="https://github.githubassets.com/images/modules/site/integrators/atom.png" alt="" class="integration-logo">
+                        </div>
+                        <div class="integration-item circle-ci" aria-label="Circle CI">
+                            <img src="https://github.githubassets.com/images/modules/site/integrators/circleci.png" alt="" class="integration-logo">
+                        </div>
+                        <div class="integration-item google" aria-label="Google">
+                            <img src="https://github.githubassets.com/images/modules/site/integrators/google.png" alt="" class="integration-logo">
+                        </div>
+                        <div class="integration-item code-climate" aria-label="Code Climate">
+                            <img src="https://github.githubassets.com/images/modules/site/integrators/codeclimate.png" alt="" class="integration-logo">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="integration-footer">
+                    <p>Sometimes, there’s more than one tool for the job. Why not try something new?</p>
+                    <a href="#">Browse GitHub Marketplace <i class="fas fa-long-arrow-alt-right"></i></a>
+                </div>
             </div>
         </div>
     </section>
