Community section header and body completed.

--- a/index.html
+++ b/index.html
@@ -388,78 +388,78 @@
     <section class="leading-companies">
         <div class="container">
             <h3 class="section-title ff-inter">See how the world's leading companies use GitHub Enterprise.</h3>
-            <div class="companines">
-                <a href="#" class="companies-item">
-                    <div class="company-header">
-                        <div class="company-link-effect">
+            <div class="cards">
+                <a href="#" class="card">
+                    <div class="card-header">
+                        <div class="card-link-effect">
                             <div class="square">
                                 <i class="fas fa-long-arrow-alt-up"></i>
                             </div>
                         </div>
                         <img src="https://customer-stories-feed.github.com/customer_stories/mgm-resorts/hero.jpg" alt="">
                     </div>
-                    <div class="company-body">
+                    <div class="card-body">
                         <h1>MGM Resorts International</h1>
-                        <span>Hospitality</span>
+                        <p>Hospitality</p>
                     </div>
-                    <div class="company-footer">
+                    <div class="card-footer">
                         <span>Read More</span>
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </div>
                 </a>
 
-                <a href="#" class="companies-item">
-                    <div class="company-header">
-                        <div class="company-link-effect">
+                <a href="#" class="card">
+                    <div class="card-header">
+                        <div class="card-link-effect">
                             <div class="square">
                                 <i class="fas fa-long-arrow-alt-up"></i>
                             </div>
                         </div>
                         <img src="https://customer-stories-feed.github.com/customer_stories/nationwide/nw_hero.jpg" alt="">
                     </div>
-                    <div class="company-body">
+                    <div class="card-body">
                         <h1>Nationwide</h1>
-                        <span>Insurance</span>
+                        <p>Insurance</p>
                     </div>
-                    <div class="company-footer">
+                    <div class="card-footer">
                         <span>Read More</span>
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </div>
                 </a>
 
-                <a href="#" class="companies-item">
-                    <div class="company-header">
-                        <div class="company-link-effect">
+                <a href="#" class="card">
+                    <div class="card-header">
+                        <div class="card-link-effect">
                             <div class="square">
                                 <i class="fas fa-long-arrow-alt-up"></i>
                             </div>
                         </div>
                         <img src="https://customer-stories-feed.github.com/customer_stories/sap/sap6.jpg" alt="">
                     </div>
-                    <div class="company-body">
+                    <div class="card-body">
                         <h1>SAP</h1>
-                        <span>Business Software</span>
+                        <p>Business Software</p>
                     </div>
-                    <div class="company-footer">
+                    <div class="card-footer">
                         <span>Read More</span>
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </div>
                 </a>
 
-                <a href="#" class="companies-item">
-                    <div class="company-header">
-                        <div class="company-link-effect">
+                <a href="#" class="card">
+                    <div class="card-header">
+                        <div class="card-link-effect">
                             <div class="square">
                                 <i class="fas fa-long-arrow-alt-up"></i>
                             </div>
                         </div>
                         <img src="https://customer-stories-feed.github.com/customer_stories/spotify/spotifyhero.jpg" alt="">
                     </div>
-                    <div class="company-body">
+                    <div class="card-body">
                         <h1 class="ff-inter">Spotify</h1>
-                        <span>Technology / Streaming</span>
+                        <p>Technology / Streaming</p>
                     </div>
-                    <div class="company-footer">
+                    <div class="card-footer">
                         <span>Read More</span>
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </div>
@@ -568,6 +568,112 @@
                     <p>Sometimes, there’s more than one tool for the job. Why not try something new?</p>
                     <a href="#">Browse GitHub Marketplace <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="community">
+        <div class="container">
+            <div class="community-content">
+                <div class="community-header">
+                    <div class="section-head">
+                        <p class="sm-description ff-mono">Community </p>
+                        <h1 class="section-title ff-inter">Welcome home,<br>developers</h1>
+                        <p class="section-description ff-inter">GitHub is home to the world’s largest community of developers and their projects...</p>
+                    </div>
+                </div>
+                <div class="community-body">
+                    <div class="cards">
+                        <a href="#" class="card">
+                            <div class="card-header">
+                                <div class="card-link-effect">
+                                    <div class="square">
+                                        <i class="fas fa-long-arrow-alt-up"></i>
+                                    </div>
+                                </div>
+                                <img src="https://customer-stories-feed.github.com/customer_stories/freakboy3742/hero.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h1>Russell Keith-Magee</h1>
+                                <p>
+          Russell Keith-Magee created BeeWare to fill a gap in his own process. Today, BeeWare is the go-to project for supporting Python on every platform.
+      </p>
+                            </div>
+                            <div class="card-footer">
+                                <span>Read More</span>
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+                        </a>
+
+                        <a href="#" class="card">
+                            <div class="card-header">
+                                <div class="card-link-effect">
+                                    <div class="square">
+                                        <i class="fas fa-long-arrow-alt-up"></i>
+                                    </div>
+                                </div>
+                                <img src="https://customer-stories-feed.github.com/customer_stories/kris-nova/hero.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h1>Kris Nova</h1>
+                                <p>
+          Kris Nova quickly developed a passion for open source software. Now she gets to work on open source tooling at her day job, which includes maintaining Kubernetes Operations (kops).
+      </p>
+                            </div>
+                            <div class="card-footer">
+                                <span>Read More</span>
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+                        </a>
+
+                        <a href="#" class="card">
+                            <div class="card-header">
+                                <div class="card-link-effect">
+                                    <div class="square">
+                                        <i class="fas fa-long-arrow-alt-up"></i>
+                                    </div>
+                                </div>
+                                <img src="https://customer-stories-feed.github.com/customer_stories/yyx990803/hero.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h1>Evan You</h1>
+                                <p>
+          In 2013, Evan You founded Vue, a Javascript framework funded by the community on Patreon. In 2016, Vue reached 2,000,000 downloads.
+      </p>
+                            </div>
+                            <div class="card-footer">
+                                <span>Read More</span>
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+                        </a>
+
+                        <a href="#" class="card">
+                            <div class="card-header">
+                                <div class="card-link-effect">
+                                    <div class="square">
+                                        <i class="fas fa-long-arrow-alt-up"></i>
+                                    </div>
+                                </div>
+                                <img src="https://customer-stories-feed.github.com/customer_stories/jessfraz/hero.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h1 class="ff-inter">Jess Frazelle</h1>
+                                <p>
+          Jess Frazelle works on Kubernetes full-time. Previously she maintained Docker, a software containerization platform used by thousands of teams.
+      </p>
+                            </div>
+                            <div class="card-footer">
+                                <span>Read More</span>
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="community-footer">
+                    <p class="section-description ff-inter">...whether you’re making your first commit or sending a Rover to Mars, there’s room for you here, too.
+                    </p>
+                </div>
+
             </div>
         </div>
     </section>
