Community section completed.

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                         <img src="https://github.githubassets.com/images/modules/site/home/team-tools.svg" alt="">
                     </div>
                 </div>
-                <div class="features-list">
+                <div class="features">
                         <div class="features-item" data-id="0">
                                 <div class="text">
                                     <h3 class="features-item-title ff-inter">Write better code</h3>
@@ -672,6 +672,55 @@
                 <div class="community-footer">
                     <p class="section-description ff-inter">...whether you’re making your first commit or sending a Rover to Mars, there’s room for you here, too.
                     </p>
+
+                    <div class="statistics">
+                        <a href="#" class="statistic repositories">
+                            <div class="statistics-number">
+                                <span class="number ff-inter">100M<sup>*</sup></span>
+                                <span class="text">repositories worldwide</span>
+                            </div>
+                            <div class="features-item">
+                                <div class="text">
+                                    <p class="features-item-description">GitHub’s users create and maintain influential technologies alongside the world’s largest
+                                        <span class="sp-repositories">open source community</span></p>
+                                </div>
+                                <div class="arrow-right-icon">
+                                    <i class="fas fa-caret-right"></i>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="statistic developers">
+                            <div class="statistics-number">
+                                <span class="number ff-inter">50M<sup>*</sup></span>
+                                <span class="text">developers <br> worldwide</span>
+                            </div>
+                            <div class="features-item">
+                                <div class="text">
+                                    <p class="features-item-description"> <span class="sp-developers">Developers </span> use GitHub for personal projects, from experimenting with new programming languages to hosting their life’s work.</p></div>
+                                <div class="arrow-right-icon">
+                                    <i class="fas fa-caret-right"></i>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="statistic businesses">
+                            <div class="statistics-number">
+                                <span class="number ff-inter">2.9M<sup>*</sup></span>
+                                <span class="text">businesses & organizations worldwide</span>
+                            </div>
+                            <div class="features-item">
+                                <div class="text">
+                                    <p class="features-item-description">
+                                        <span class="sp-businesses" >Businesses</span>
+                                        of all sizes use GitHub to support their development process and to securely build software.</p>
+                                </div>
+                                <div class="arrow-right-icon">
+                                    <i class="fas fa-caret-right"></i>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="statictics-date">* As of August 2019</div>
+                    </div>
+
                 </div>
 
             </div>
