--- a/index.html
+++ b/index.html
@@ -350,36 +350,36 @@
                     </div>
                 </div>
                 <div class="features">
-                        <div class="features-item" data-id="0">
+                        <a class="features-item" data-id="0">
                                 <div class="text">
                                     <h3 class="features-item-title ff-inter">Write better code</h3>
                                     <p class="features-item-description">Collaboration makes perfect. The conversations and code reviews that happen in pull requests help your team share the weight of your work and improve the software you build.
-                                        <a href="#">Learn about code review.</a></p>
+                                        <span class="desc-link">Learn about code review.</span></p>
                                 </div>
                                 <div class="arrow-right-icon">
                                     <i class="fas fa-caret-right"></i>
                                 </div>
-                        </div>
-                        <div class="features-item" data-id="1">
+                        </a>
+                        <a class="features-item" data-id="1">
                             <div class="text">
                                 <h3 class="features-item-title ff-inter">Manage your chaos</h3>
                                 <p class="features-item-description">Take a deep breath. On GitHub, project management happens in issues and project boards, right alongside your code. All you have to do is mention a teammate to get them involved.
-                                    <a href="#">Learn about project management.</a></p>
+                                    <span class="desc-link">Learn about project management.</span></p>
                             </div>
                             <div class="arrow-right-icon">
                                 <i class="fas fa-caret-right"></i>
                             </div>
-                        </div>
-                        <div class="features-item" data-id="2">
+                        </a>
+                        <a class="features-item" data-id="2">
                             <div class="text">
                                 <h3 class="features-item-title ff-inter">Find the right tools</h3>
                                 <p class="features-item-description">Browse and buy apps from GitHub Marketplace with your GitHub account. Find the tools you like or discover new favorites—then start using them in minutes.
-                                    <a href="#">Learn about integrations.</a></p>
+                                    <span class="desc-link">Learn about integrations.</span></p>
                             </div>
                             <div class="arrow-right-icon">
                                 <i class="fas fa-caret-right"></i>
                             </div>
-                        </div>
+                        </a>
                 </div>
             </div>
         </div>
