--- a/index.html
+++ b/index.html
@@ -727,6 +727,33 @@
         </div>
     </section>
 
+
+    <section class="signup">
+        <div class="container">
+            <h2 class="signup-title ff-inter">
+                Get started for free — join the millions of developers already using GitHub to share their code, work together, and build amazing things.
+            </h2>
+            <div class="signup-form">
+                <div class="form-group">
+                    <label for="username2">Username</label>
+                    <input type="text" id="username2" placeholder="Pick a username">
+                </div>
+                <div class="form-group">
+                    <label for="email2">Email</label>
+                    <input type="email" id="email2" placeholder="Your email address">
+                </div>
+                <div class="form-group">
+                    <label for="password-2">Password</label>
+                    <input type="password" id="password-2" placeholder="Create a password">
+                </div>
+                <a href="#" class="btn-sign-up">Sign up for Github</a>
+            </div>
+            <p class="footer-description">By clicking “Sign up for GitHub”, you agree to our <a href="#">terms of service</a> and
+                <a href="#">privacy statement</a>. We’ll occasionally send you account related emails.
+            </p>
+        </div>
+    </section>
+
 </main>
 
 
