Footer section completed.

--- a/index.html
+++ b/index.html
@@ -753,10 +753,168 @@
             </p>
         </div>
     </section>
-
 </main>
 
+<footer class="footer">
+    <div class="container">
+        <div class="footer-body">
+            <div class="footer-logo">
+                <svg height="30" viewBox="0 0 45 16" version="1.1" width="84" ><path fill-rule="evenodd" d="M18.53 12.03h-.02c.009 0 .015.01.024.011h.006l-.01-.01zm.004.011c-.093.001-.327.05-.574.05-.78 0-1.05-.36-1.05-.83V8.13h1.59c.09 0 .16-.08.16-.19v-1.7c0-.09-.08-.17-.16-.17h-1.59V3.96c0-.08-.05-.13-.14-.13h-2.16c-.09 0-.14.05-.14.13v2.17s-1.09.27-1.16.28c-.08.02-.13.09-.13.17v1.36c0 .11.08.19.17.19h1.11v3.28c0 2.44 1.7 2.69 2.86 2.69.53 0 1.17-.17 1.27-.22.06-.02.09-.09.09-.16v-1.5a.177.177 0 00-.146-.18zM42.23 9.84c0-1.81-.73-2.05-1.5-1.97-.6.04-1.08.34-1.08.34v3.52s.49.34 1.22.36c1.03.03 1.36-.34 1.36-2.25zm2.43-.16c0 3.43-1.11 4.41-3.05 4.41-1.64 0-2.52-.83-2.52-.83s-.04.46-.09.52c-.03.06-.08.08-.14.08h-1.48c-.1 0-.19-.08-.19-.17l.02-11.11c0-.09.08-.17.17-.17h2.13c.09 0 .17.08.17.17v3.77s.82-.53 2.02-.53l-.01-.02c1.2 0 2.97.45 2.97 3.88zm-8.72-3.61h-2.1c-.11 0-.17.08-.17.19v5.44s-.55.39-1.3.39-.97-.34-.97-1.09V6.25c0-.09-.08-.17-.17-.17h-2.14c-.09 0-.17.08-.17.17v5.11c0 2.2 1.23 2.75 2.92 2.75 1.39 0 2.52-.77 2.52-.77s.05.39.08.45c.02.05.09.09.16.09h1.34c.11 0 .17-.08.17-.17l.02-7.47c0-.09-.08-.17-.19-.17zm-23.7-.01h-2.13c-.09 0-.17.09-.17.2v7.34c0 .2.13.27.3.27h1.92c.2 0 .25-.09.25-.27V6.23c0-.09-.08-.17-.17-.17zm-1.05-3.38c-.77 0-1.38.61-1.38 1.38 0 .77.61 1.38 1.38 1.38.75 0 1.36-.61 1.36-1.38 0-.77-.61-1.38-1.36-1.38zm16.49-.25h-2.11c-.09 0-.17.08-.17.17v4.09h-3.31V2.6c0-.09-.08-.17-.17-.17h-2.13c-.09 0-.17.08-.17.17v11.11c0 .09.09.17.17.17h2.13c.09 0 .17-.08.17-.17V8.96h3.31l-.02 4.75c0 .09.08.17.17.17h2.13c.09 0 .17-.08.17-.17V2.6c0-.09-.08-.17-.17-.17zM8.81 7.35v5.74c0 .04-.01.11-.06.13 0 0-1.25.89-3.31.89-2.49 0-5.44-.78-5.44-5.92S2.58 1.99 5.1 2c2.18 0 3.06.49 3.2.58.04.05.06.09.06.14L7.94 4.5c0 .09-.09.2-.2.17-.36-.11-.9-.33-2.17-.33-1.47 0-3.05.42-3.05 3.73s1.5 3.7 2.58 3.7c.92 0 1.25-.11 1.25-.11v-2.3H4.88c-.11 0-.19-.08-.19-.17V7.35c0-.09.08-.17.19-.17h3.74c.11 0 .19.08.19.17z"></path></svg>
+            </div>
+            <div class="footer-nav">
+                <div class="footer-col">
+                        <h2 class="title ff-mono">Product</h2>
+                        <ul class="footer-links">
+                            <li class="footer-nav-item">
+                                <a href="#" class="footer-link">Features</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a href="#" class="footer-link">Security</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a href="#" class="footer-link">Team</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a href="#" class="footer-link">Enterprise</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a href="#" class="footer-link">Customer stories</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a href="#" class="footer-link">The ReadME Project</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a href="#" class="footer-link">Pricing</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a href="#" class="footer-link">Resources</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a href="#" class="footer-link">Roadmap</a>
+                            </li>
+                        </ul>
+                    </div>
 
+                <div class="footer-col">
+                    <h2 class="title ff-mono">Platform</h2>
+                    <ul class="footer-links">
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Developer API</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Partners</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Atom</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Electron</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">GitHub Desktop</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h2 class="title ff-mono">Support</h2>
+                    <ul class="footer-links">
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Help</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Community Forum</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Professional Services</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Learning Lab</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Status</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Contact GitHub</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h2 class="title ff-mono">Company</h2>
+                    <ul class="footer-links">
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">About</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Blog</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Careers</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Press</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Social Impact</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-link">Shop</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <div class="container">
+            <ul class="another-links">
+                <li class="nav-item">
+                    <span class="copyright">© 2020 GitHub, Inc</span>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Terms</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Privacy</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Site Map</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">What is Git?</a>
+                </li>
+            </ul>
+            <div class="social-media">
+                <div class="social-item">
+                    <a href="#" class="social-link">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </div>
+                <div class="social-item">
+                    <a href="#" class="social-link">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                </div>
+                <div class="social-item">
+                    <a href="#" class="social-link">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+                <div class="social-item">
+                    <a href="#" class="social-link">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
+                <div class="social-item">
+                    <a href="#" class="social-link">
+                        <i class="fab fab fa-github"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="assets/js/main.js"></script>
 </body>
