--- a/index.html
+++ b/index.html
@@ -21,169 +21,180 @@
         <div class="nav-logo">
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
-        <div class="nav-main-menu">
-            <ul class="nav-main-links">
-                <li class="nav-main-item">
-                    <a href="#" class="nav-main-link">
-                        <span class="nav-main-link-text">Why Github?</span>
-                        <i class="fas fa-chevron-down"></i>
-                    </a>
-                    <div class="nav-dropdown-menu">
-                        <div class="dropdown-header">
-                            <h3 class="dropdown-menu-title"><a href="#">Features</a></h3>
+        <div class="nav-menu">
+            <div class="menu-close-icon ">
+                <i class="fas fa-times nav-toggle-btn"></i>
+            </div>
+            <div class="nav-main-menu">
+                <ul class="nav-main-links">
+                    <li class="nav-main-item">
+                        <a href="#" class="nav-main-link">
+                            <span class="nav-main-link-text">Why Github?</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </a>
+                        <div class="nav-dropdown-menu">
+                            <div class="dropdown-header">
+                                <h3 class="dropdown-menu-title"><a href="#">Features</a></h3>
+                            </div>
+                            <div class="dropdown-body">
+                                <ul class="nav-dropdown-links">
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Code review</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Project management</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Integrations</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Packages</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Security</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Team management</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Hosting</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Mobile</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="dropdown-footer dropdown-footer-bold">
+                                <ul class="nav-dropdown-links">
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Customer stories</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Security</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="dropdown-body">
-                            <ul class="nav-dropdown-links">
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Code review</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Project management</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Integrations</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Packages</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Security</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Team management</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Hosting</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Mobile</a>
-                                </li>
-                            </ul>
+                    </li>
+                    <li class="nav-main-item">
+                        <a href="#" class="nav-main-link">
+                            <span class="nav-main-link-text">Team</span>
+                        </a>
+                    </li>
+                    <li class="nav-main-item">
+                        <a href="#" class="nav-main-link">
+                            <span class="nav-main-link-text">Enterprise</span>
+                        </a>
+                    </li>
+                    <li class="nav-main-item">
+                        <a href="#" class="nav-main-link">
+                            <span class="nav-main-link-text">Explore</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </a>
+                        <div class="nav-dropdown-menu">
+                            <div class="dropdown-header">
+                                <h3 class="dropdown-menu-title"><a href="#">Explore Github</a></h3>
+                            </div>
+                            <div class="dropdown-body">
+                                <ul class="nav-dropdown-links">
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Learn &amp; contribute</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Topics</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Collections</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Trending</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Learning Lab</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Open source guides</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="dropdown-footer">
+                                <ul class="nav-dropdown-links">
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Connect with others</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Events</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Community forum</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">GitHub Education</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">GitHub Stars program</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="dropdown-footer dropdown-footer-bold">
-                            <ul class="nav-dropdown-links">
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Customer stories</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Security</a>
-                                </li>
-                            </ul>
+                    </li>
+                    <li class="nav-main-item">
+                        <a href="#" class="nav-main-link">
+                            <span class="nav-main-link-text">Marketplace</span>
+                        </a>
+                    </li>
+                    <li class="nav-main-item">
+                        <a href="#" class="nav-main-link">
+                            <span class="nav-main-link-text">Pricing</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </a>
+                        <div class="nav-dropdown-menu">
+                            <div class="dropdown-header">
+                                <h3 class="dropdown-menu-title"><a href="#">Plans</a></h3>
+                            </div>
+                            <div class="dropdown-body">
+                                <ul class="nav-dropdown-links">
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Compare plans</a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Contact Sales</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="dropdown-footer dropdown-footer-bold">
+                                <ul class="nav-dropdown-links">
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Nonprofit </a>
+                                    </li>
+                                    <li class="nav-dropdown-item">
+                                        <a href="#" class="nav-dropdown-link">Education </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="nav-form">
+                <div class="search-form">
+                    <input type="text" placeholder="Search Github">
+                    <img src="https://github.githubassets.com/images/search-key-slash.svg" alt="">
+                    <div class="search-hint">
+                        <i class="fas fa-search"></i>
+                        <a href="#" class="search-text"><span>mustafadalga</span></a>
+                        <a href="#" class="all-github"><span>All Github</span> <i class="fas fa-level-down-alt"></i></a>
                     </div>
-                </li>
-                <li class="nav-main-item">
-                    <a href="#" class="nav-main-link">
-                        <span class="nav-main-link-text">Team</span>
-                    </a>
-                </li>
-                <li class="nav-main-item">
-                    <a href="#" class="nav-main-link">
-                        <span class="nav-main-link-text">Enterprise</span>
-                    </a>
-                </li>
-                <li class="nav-main-item">
-                    <a href="#" class="nav-main-link">
-                        <span class="nav-main-link-text">Explore</span>
-                        <i class="fas fa-chevron-down"></i>
-                    </a>
-                    <div class="nav-dropdown-menu">
-                        <div class="dropdown-header">
-                            <h3 class="dropdown-menu-title"><a href="#">Explore Github</a></h3>
-                        </div>
-                        <div class="dropdown-body">
-                            <ul class="nav-dropdown-links">
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Learn &amp; contribute</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Topics</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Collections</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Trending</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Learning Lab</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Open source guides</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="dropdown-footer">
-                            <ul class="nav-dropdown-links">
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Connect with others</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Events</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Community forum</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">GitHub Education</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">GitHub Stars program</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </li>
-                <li class="nav-main-item">
-                    <a href="#" class="nav-main-link">
-                        <span class="nav-main-link-text">Marketplace</span>
-                    </a>
-                </li>
-                <li class="nav-main-item">
-                    <a href="#" class="nav-main-link">
-                        <span class="nav-main-link-text">Pricing</span>
-                        <i class="fas fa-chevron-down"></i>
-                    </a>
-                    <div class="nav-dropdown-menu">
-                        <div class="dropdown-header">
-                            <h3 class="dropdown-menu-title"><a href="#">Plans</a></h3>
-                        </div>
-                        <div class="dropdown-body">
-                            <ul class="nav-dropdown-links">
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Compare plans</a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Contact Sales</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="dropdown-footer dropdown-footer-bold">
-                            <ul class="nav-dropdown-links">
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Nonprofit </a>
-                                </li>
-                                <li class="nav-dropdown-item">
-                                    <a href="#" class="nav-dropdown-link">Education </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="nav-form">
-            <div class="search-form">
-                <input type="text" placeholder="Search Github">
-                <img src="https://github.githubassets.com/images/search-key-slash.svg" alt="">
-                <div class="search-hint">
-                    <i class="fas fa-search"></i>
-                    <a href="#" class="search-text"><span>mustafadalga</span></a>
-                    <a href="#" class="all-github"><span>All Github</span> <i class="fas fa-level-down-alt"></i></a>
+                </div>
+                <div>
+                    <a href="#" class="btn btn-login">Sign in</a>
+                    <a href="#" class="btn btn-register">Sign up</a>
                 </div>
             </div>
-            <a href="#" class="btn btn-login">Sign in</a>
+        </div>
+        <div class="nav-mobile">
             <a href="#" class="btn btn-register">Sign up</a>
+            <i class="fas fa-bars nav-toggle-btn"></i>
         </div>
     </nav>
 </div>
