--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <a href="#" class="all-github"><span>All Github</span> <i class="fas fa-level-down-alt"></i></a>
                     </div>
                 </div>
-                <div>
+                <div class="nav-btn-wrap">
                     <a href="#" class="btn btn-login">Sign in</a>
                     <a href="#" class="btn btn-register">Sign up</a>
                 </div>
