Github enterprise section mobile responsive completed.

--- a/index.html
+++ b/index.html
@@ -249,21 +249,24 @@
                     <h2 class="ff-inter">Get started with GitHub Enterprise</h2>
                     <p>Take collaboration to the next level with security and administrative features built for teams.</p>
                 </div>
-                <div class="enterprise-item">
-                    <img src="https://github.githubassets.com/images/modules/orgs/enterprise.svg" alt="">
-                    <h3 class="ff-inter">Enterprise</h3>
-                    <p>Deploy to your environment or the cloud.</p>
-                    <a href="#" class="btn btn-free-trial">Start a free trial</a>
+                <div class="enterprise-items">
+                    <div class="enterprise-item">
+                        <img src="https://github.githubassets.com/images/modules/orgs/enterprise.svg" alt="">
+                        <h3 class="ff-inter">Enterprise</h3>
+                        <p>Deploy to your environment or the cloud.</p>
+                        <a href="#" class="btn btn-free-trial">Start a free trial</a>
+                    </div>
+                    <div class="enterprise-item">
+                        <img src="https://github.githubassets.com/images/modules/site/icons/support.svg" alt="">
+                        <h3>Talk to us</h3>
+                        <p>Need help?</p>
+                        <a href="#" class="btn-outline-blue btn btn-contact-sales">
+                            <span>Contact Sales</span>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+                    </div>
                 </div>
-                <div class="enterprise-item">
-                    <img src="https://github.githubassets.com/images/modules/site/icons/support.svg" alt="">
-                    <h3>Talk to us</h3>
-                    <p>Need help?</p>
-                    <a href="#" class="btn-outline-blue btn btn-contact-sales">
-                        <span>Contact Sales</span>
-                        <i class="fas fa-long-arrow-alt-right"></i>
-                    </a>
-                </div>
+
             </div>
         </div>
     </section>
