Features section mobile responsive completed.

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <div class="features-head-img">
                     <img src="https://github.githubassets.com/images/modules/site/home/team.svg" alt="">
                     <div class="features-item-img">
-                        <img src="https://github.githubassets.com/images/modules/site/home/team-code.svg" alt="" class="active">
+                        <img src="https://github.githubassets.com/images/modules/site/home/team-code.svg" alt="" >
                         <img src="https://github.githubassets.com/images/modules/site/home/team-chaos.svg" alt="" >
                         <img src="https://github.githubassets.com/images/modules/site/home/team-tools.svg" alt="">
                     </div>
